kube/glance-dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance-dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: glance.apps.alomalab.internal
      http:
        paths:
          - path: /
            backend:
              service:
                name: glance
                port:
                  number: 8080
            pathType: Prefix
status:
  loadBalancer: {}
